--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
         "files.associations": {
 		"ft_printf.h": "c",
-		"so_long.h": "c"
+		"so_long.h": "c",
+		"unistd.h": "c",
+		"stdbool.h": "c",
+		"mlx.h": "c",
+		"libft.h": "c"
 	}
 }
