--- a/sources/libft/Makefile
+++ b/sources/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: marcsilv <marcsilv@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/29 18:11:49 by marcsilv          #+#    #+#              #
-#    Updated: 2024/10/03 11:35:49 by marcsilv         ###   ########.fr        #
+#    Updated: 2024/10/03 13:58:19 by marcsilv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,9 +18,9 @@ INC_DIR = includes
 OBJ_DIR = .
 HEADER = libft.h
 
-SRC_FILES = 		ft_atoi.c ft_num_len.c ft_putnbr.c ft_strlcpy.c ft_isdigit.c \
+SRC_FILES = 		ft_atoi.c ft_num_len.c ft_putnbr.c ft_strlcpy.c ft_isdigit.c ft_strncpy.c\
 			ft_printf.c ft_putstr.c ft_strlen.c ft_matrix_free.c ft_print_ptr.c \
-			ft_split.c ft_strncmp.c print_error.c ft_matrix_len.c \
+			ft_split.c ft_strncmp.c print_error.c ft_matrix_len.c ft_strcpy.c\
 			ft_print_unsigned.c ft_strchr.c ft_substr.c ft_memcpy.c ft_ptr_len.c \
 			ft_strdup.c ft_uitoa.c ft_memmove.c ft_putchar.c ft_strjoin.c get_next_line.c
             
